[metadata]
name= pyktx2
url= https://ousttrue.github.io/pyktx2/
description= ktx2 parser
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
license=MIT
python_requires = >=3.10
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Graphics :: 3D Modeling
keywords= ktx2
include_package_data = True

[options]
packages = find_namespace:

[options.entry_points]
gui_scripts =
    ktx2_viewer = pyktx2.viewer:run

[options.extras_require]
viewer = pyide6
